# Proyecto

./: .replit  AnalizadorElectronico.spec  README.md  ai_analyzer.py  build_android_apk.sh  build_netlify.sh  build_windows_exe.bat  buildozer.spec  database_handler.py  electronic_analyzer_runner.py  file_processor.py  main.py  main_kivy.py  netlify.config.js  netlify.toml  netlify.yaml  package-lock.json  package.json  pyproject.toml  replit.nix  requirements.txt  run_app.py  run_app_standalone.py  run_electronic_analyzer.py  setup.py  start_app.sh  start_electronic_analyzer.sh  visualization.py  web_app.py  xai_integration.py
